# injectify

./: .gitignore  Cargo.toml  README.md
injectify_impl/: Cargo.toml  README.md
injectify_impl/src/: lib.rs
injectify_macro/: Cargo.toml  README.md
injectify_macro/src/: lib.rs
src/: lib.rs
tests/: test.rs
