[package]
authors = ["Devin Sterling"]
name = "injectify"
version = "1.0.0"
edition = "2021"
license = "MIT OR GPL-3.0"
repository = "https://github.com/DevinSterling/injectify"
keywords = ["macros", "trait"]

[workspace]
members = [ "injectify_macro" ]

[dependencies]
injectify_macro = { path = "injectify_macro", version = "1.0.0" }
